# bmpglitch

./: .gitignore
scripts/: build.sh  run.sh  test.sh
src/: CMakeLists.txt  exitcode.h  main.cpp  main.h
src/Bitmap/: Bitmap.cpp  Bitmap.h
src/Image/: Image.cpp  Image.h
src/arguments/: arguments.cpp  arguments.h
src/glitch/: lineending.cpp  lineending.h
src/logger/: logger.cpp  logger.h
src/usage/: usage.cpp  usage.h
